syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hxy.rpc.grpc.model";
option java_outer_classname = "HelloProto";
option objc_class_prefix = "HLW";

package hello;

service HelloService {
    rpc hi (HelloRequest) returns (HelloReply) {
    }
}

message HelloRequest {
    string reqMsg = 1;
}

message HelloReply {
    string respMsg = 1;
}